# codica_pytest

./: README.md  pyproject.toml
codica_pytest/: example.py
tests/: test_emptiness.py  test_example.py  test_limite.py  test_stack.py
