[project]
name = "codica-pytest"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacobo",email = "jacobo.jaramillo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "codica_pytest"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
